--- a/MuscleMechanicBackEnd/pom.xml
+++ b/MuscleMechanicBackEnd/pom.xml
@@ -19,7 +19,7 @@
 <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.11</version>
+    <version>4.1</version>
 </dependency>
 
     
@@ -70,6 +70,13 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.0</version>
 		</dependency>
+
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+</dependency>
 
 
 <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
